[package]
name = "bevy-earcutr"
version = "0.7.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
edition = "2021"
description = "earcutr + Bevy"
license = "MIT/Apache-2.0"
repository = "https://github.com/frewsxcv/bevy-earcutr"
resolver = "2"

[dependencies]
bevy_render = { version = "0.9", default-features = false }
earcutr = "0.2"
